# coherent-chimera

./: .gitignore  .gitmodules  readme.md
course-work/: CMakeLists.txt  generate-matrix.cpp  main.cpp  matrix.cpp  matrix.h  report.md
course-work/python/: main.py
homeworks/: homework-1.md
hw/: hw-1.md
labs/lab-1/: optimization-levels.sh  report.md  system-optimizations.sh
labs/lab-2/: example.cpp  report.md
labs/lab-2/primes/: CMakeLists.txt  main.cpp  miller-rabin-test.cpp  miller-rabin-test.h
labs/lab-3/: main.cpp  report.md
labs/lab-4/: CMakeLists.txt  default-thread-count.cpp  matrix-rank.cpp  matrix-rank.h  paramertized-thread-count.cpp  report.md
labs/lab-5/: CMakeLists.txt  dot-to-dot.cpp  example.cpp  report.md
labs/lab-6/: CMakeLists.txt  point-to-point.cpp  report.md  scatter.cpp
labs/lab-7/: CMakeLists.txt  main.cpp  matrices.cpp  matrices.h  matrixB  report.md
lectures/: lecture-1.md  lecture-2.md  lecture-3.md  lecture-4.md  lecture-5.md  lecture-6.md  lecture-7.md  lectures.md
